--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "framer-motion": "^12.7.4",
+    "motion": "^12.7.4",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
