--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
     "react-scripts": "5.0.1",
