--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
     "react-scripts": "5.0.1",
