--- a/package.json
+++ b/package.json
@@ -55,8 +55,14 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.1.4"
+    "prettier": "3.5.3",
+    "tailwindcss": "^3.1.4",
+    "typescript-eslint": "^8.31.1"
   }
 }
